# CreatorOS

./: .env.example  .gitignore  .vercelignore  Makefile  README.md  docker-compose.yml  package.json  vercel.json
.github/: env.manifest.json  env.production.example
api/: .env.example  .env.vercel.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.py  pyproject.toml  requirements-vercel.txt  requirements.txt
docs/: AI_AGENT_DESIGN.md  ARCHITECTURE.md  COST_OPTIMIZATION.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  INTERVIEW_DEMO.md  PRODUCT_ROADMAP.md  SCALING_STRATEGY.md  SECURITY.md  schema.sql  (+1 more)
shared/agents/: pyproject.toml
shared/agents/agents/: __init__.py  audience_analyst.py  base.py  content_writer.py  growth_coach.py  pricing.py  summarizer.py  trend_research.py
shared/agents/agents/prompts/: __init__.py  manager.py  registry.py  schemas.py  system_prompts.py  templates.py  types.py
shared/agents/creatoros_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shared/ai_core/: pyproject.toml
shared/ai_core/ai_core/: __init__.py  providers.py
shared/ai_core/creatoros_ai_core.egg-info/: PKG-INFO  SOURCES.txt
shared/database/: alembic.ini  pyproject.toml
shared/database/alembic/: env.py
shared/database/alembic/versions/: 0001_create_jobs_table.py  0002_add_platform_connections.py  0003_social_accounts.py  0005_creator_settings_json.py
shared/database/creatoros_database.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shared/database/database/: __init__.py  config.py  models.py  session.py
shared/shared/: pyproject.toml
shared/shared/creatoros_shared.egg-info/: PKG-INFO  SOURCES.txt
shared/shared/shared/: __init__.py  schemas.py
(+133 files in other folders)
