[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creatoros-ai-core"
version = "0.1.0"
description = "LLM provider abstraction for CreatorOS."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_core*"]
