[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creatoros-shared"
version = "0.1.0"
description = "Shared schemas and types for CreatorOS services."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
